--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@
     --light-grey: rgba(130, 143, 163, .1);
     --dim: rgba(0, 0, 0, 0.5);
     --red: rgb(234, 85, 85);
+    --bg-dark: rgb(32, 33, 44);
+    --bg-50dark: rgb(43, 44, 55);
 }
 
 body {
@@ -22,20 +24,41 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.board,
-.edit {
+.board {
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
 
-.board::-webkit-scrollbar,
-.edit::-webkit-scrollbar {
+.board::-webkit-scrollbar {
     display: none;
+}
+
+.edit::-webkit-scrollbar,
+.addTask::-webkit-scrollbar {
+    width: 15px;
+}
+
+.addTask::-webkit-scrollbar-track,
+.edit::-webkit-scrollbar-track {
+    border-radius: 7.5px;
+}
+
+.addTask::-webkit-scrollbar-thumb,
+.edit::-webkit-scrollbar-thumb {
+    border-radius: 7.5px;
+    background-color: var(--light-purple);
 }
 
 button {
     background-color: transparent;
     border: none;
     cursor: pointer;
+    font-family: 'PlusJakartaSansRegular', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+}
+
+input,
+textarea,
+select,
+option {
     font-family: 'PlusJakartaSansRegular', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
